condensed to a single page layout, fix various element poistion, changed z-index, fix nav bar, add smooth glide to scroll.

--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -4051,7 +4051,7 @@ nav .nav-wrapper {
 nav .button-collapse {
   float: left;
   position: relative;
-  z-index: 1;
+  z-index: 1000;
   height: 56px;
   margin: 0 18px;
 }
@@ -4194,7 +4194,7 @@ nav .input-field label.active i {
 .navbar-fixed {
   position: relative;
   height: 56px;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .navbar-fixed nav {
